Added league controller

--- a/LIVESPORT/View/Base.lproj/Main.storyboard
+++ b/LIVESPORT/View/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
             </objects>
             <point key="canvasLocation" x="1711.5942028985507" y="-279.24107142857139"/>
         </scene>
-        <!--Competition View Controller-->
+        <!--ALL LEAGUES-->
         <scene sceneID="Wrh-5X-vzM">
             <objects>
                 <viewController id="E2L-ov-dpz" customClass="CompetitionViewController" customModule="LIVESPORT" customModuleProvider="target" sceneMemberID="viewController">
@@ -47,20 +47,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h1E-Iw-Uxd">
-                                <rect key="frame" x="83" y="347" width="209" height="82"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dwL-qO-iA4">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="QcN-Kw-qYD"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="dwL-qO-iA4" firstAttribute="top" secondItem="QcN-Kw-qYD" secondAttribute="top" id="MSL-4w-EFD"/>
+                            <constraint firstItem="dwL-qO-iA4" firstAttribute="leading" secondItem="QcN-Kw-qYD" secondAttribute="leading" id="NZP-y6-ugl"/>
+                            <constraint firstItem="QcN-Kw-qYD" firstAttribute="bottom" secondItem="dwL-qO-iA4" secondAttribute="bottom" id="aMV-dE-v8R"/>
+                            <constraint firstItem="QcN-Kw-qYD" firstAttribute="trailing" secondItem="dwL-qO-iA4" secondAttribute="trailing" id="djs-1s-PJB"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="ykP-Ff-aUc"/>
+                    <navigationItem key="navigationItem" title="ALL LEAGUES" id="ykP-Ff-aUc"/>
                     <connections>
-                        <outlet property="lbl" destination="h1E-Iw-Uxd" id="DLe-Yv-tzD"/>
+                        <outlet property="tableView" destination="dwL-qO-iA4" id="vgc-S6-fUE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="97y-IX-S4g" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
