--- a/LIVESPORT/View/Base.lproj/Main.storyboard
+++ b/LIVESPORT/View/Base.lproj/Main.storyboard
@@ -564,11 +564,78 @@
                     <navigationItem key="navigationItem" title="Sport" id="35Z-1A-POb"/>
                     <connections>
                         <outlet property="countrySportCollectionView" destination="SVg-hA-1Re" id="zYn-8d-OBX"/>
+                        <segue destination="4ig-ZW-Xnq" kind="show" identifier="showCountryLeague" id="EV1-Ng-8Si"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="png-yr-RZk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4442.0289855072469" y="450.66964285714283"/>
+        </scene>
+        <!--Country League View Controller-->
+        <scene sceneID="vYN-bP-Gke">
+            <objects>
+                <viewController storyboardIdentifier="league" id="4ig-ZW-Xnq" customClass="CountryLeagueViewController" customModule="LIVESPORT" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1If-FM-fP1">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bEM-aG-T0z">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="countryLeagueCell" rowHeight="137" id="GZi-v0-zag" customClass="CountryLeagueTableViewCell" customModule="LIVESPORT" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="137"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GZi-v0-zag" id="8t4-2g-w2w">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="137"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N7j-kV-JKh">
+                                                    <rect key="frame" x="20" y="4" width="374" height="128"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="p2N-JY-Dbk">
+                                                            <rect key="frame" x="8" y="8" width="86" height="112"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jDq-iu-JS3">
+                                                            <rect key="frame" x="102" y="23" width="252" height="78"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemTealColor"/>
+                                                </view>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="leagueImage" destination="p2N-JY-Dbk" id="Cpx-kL-j54"/>
+                                            <outlet property="leagueName" destination="jDq-iu-JS3" id="r3h-OP-qNS"/>
+                                            <outlet property="leagueView" destination="N7j-kV-JKh" id="Q5w-EG-qon"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Tho-S7-FAe"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="bEM-aG-T0z" firstAttribute="top" secondItem="Tho-S7-FAe" secondAttribute="top" id="1Qv-AN-Rui"/>
+                            <constraint firstItem="bEM-aG-T0z" firstAttribute="leading" secondItem="Tho-S7-FAe" secondAttribute="leading" id="Heo-Xi-0dC"/>
+                            <constraint firstItem="Tho-S7-FAe" firstAttribute="bottom" secondItem="bEM-aG-T0z" secondAttribute="bottom" id="gTc-6R-HFg"/>
+                            <constraint firstItem="Tho-S7-FAe" firstAttribute="trailing" secondItem="bEM-aG-T0z" secondAttribute="trailing" id="yjA-1L-9A3"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="xrh-H0-N9R"/>
+                    <connections>
+                        <outlet property="tableView" destination="bEM-aG-T0z" id="OIV-H9-vea"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DCQ-Pf-sKM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5298.5507246376819" y="450.66964285714283"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Uya-aZ-vqU">
